fixed alignment in tablet

--- a/src/pages/home/style.less
+++ b/src/pages/home/style.less
@@ -71,7 +71,8 @@
       .description-block {
         margin: 0.5em 20vw;
         .Typist {
-          min-width: 60vw;
+          min-width: 40vw;
+          margin: auto;
         }
       }
     }
@@ -86,7 +87,6 @@
 @media only screen and (max-width: 500px) {
   .home-grid {
     .cool-img {
-      margin-top: 0px;
       img {
         max-width: none;
         width: 80vw;
@@ -95,7 +95,9 @@
 
     .home-description {
       .description-block {
+        margin: 0.5em 10vw;
         .Typist {
+          min-width: 60vw;
           min-height: 6em;
         }
       }
