--- a/src/pages/navbar/style.less
+++ b/src/pages/navbar/style.less
@@ -63,7 +63,7 @@
   }
 
   .navbar-mobile>button {
-    padding: 1em;
+    padding: 1rem;
     float: right;
     border: none;
     background-color: transparent;
@@ -72,6 +72,7 @@
 
   .navbar-mobile>a:first-of-type {
     float: left;
+    padding: 1rem;
   }
 
   .menuicon {
